# scrab

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
.github/workflows/: main.yml
data/locale/: en-US.ini
package/: README.txt  install-linux.sh  installer.iss  package-linux.sh  package-windows.ps1
src/: plugin-macros.h.in  scrab.cpp
src/screenshot/: screengrabberchooserrectitem.cpp  screengrabberchooserrectitem.hpp  screengrabberoverlayitem.cpp  screengrabberoverlayitem.hpp  screenshotgrabber.cpp  screenshotgrabber.hpp  toolboxgraphicsitem.cpp  toolboxgraphicsitem.hpp
